# jppy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  jppy.rst
examples/: Interactive Muon PDF.ipynb  cherenkov_muon.py  interactive_oscprob.ipynb  oscprob_python.ipynb
jpp/: README.md
jpp/JIO/: JBufferedIO.hh
jpp/JLang/: JAbstractPointer.hh  JAssert.hh  JBool.hh  JClass.hh  JClonable.hh  JEquals.hh  JException.hh  JForwardIterator.hh  JLangToolkit.hh  JObjectID.hh  JSharedCounter.hh  JSharedPointer.hh  JSinglePointer.hh  JStorage.hh  JVoid.hh
jpp/JMath/: JCalculator.hh  JConstants.hh  JMathSupportkit.hh
jpp/JPhysics/: JConstants.hh  JNPETable.hh  JPDFTable.hh  JPDFToolkit.hh  JPDFTypes.hh  JPDF_t.hh
jpp/JTools/: JAbstractCollection.hh  JArray.hh  JAssembler.hh  JCollection.hh  JDistance.hh  JElement.hh  JFunctional.hh  JGrid.hh  JGridCollection.hh  JGridMap.hh  JHermiteSpline.hh  JMap.hh  JMappableCollection.hh  JMultiFunction.hh  JMultiHistogram.hh  JMultiKey.hh  JMultiMap.hh  JMultiPair.hh  JPolint.hh  JRange.hh  JResultTransformer.hh  JTransformer.hh
scripts/: create_venv.sh  get_jpp.sh  get_pdfs.sh
src/: npe.cc  pdf.cc
src/jpp/: README.md
src/jpp/JIO/: JBufferedIO.hh  JFileStreamIO.hh  JObjectBinaryIO.hh  JSerialisable.hh  JStreamIO.hh
src/jpp/JLang/: JAbstractFile.hh  JAbstractIO.hh  JAbstractObjectStatus.hh  JAnyType.hh  JAssert.hh  JBinaryIO.hh  JCC.hh  JCategory.hh  JColorFacet.hh  JComparable.hh  JComparisonAvailable.hh  JEquation.hh  JEquationFacet.hh  JEquationParameters.hh  JException.hh  JFile.hh  JFileDescriptorMask.hh  JFileStream.hh  JFileStreamBuffer.hh  JLangToolkit.hh  JManip.hh  JMemory.hh  JNullType.hh  JObjectIO.hh  JObjectStreamIO.hh  (+16 more)
src/jppy/: JppyOscProbInterpolator.hh  __init__.py  constants.cc  geane.cc  lang.cc  oscprob.cc  pdf_evaluator.py  utils.hh
tests/: test_geane.py  test_joscprob.py  test_pdf.py  test_pdf_evaluator.py
(+66 files in other folders)
