[metadata]
name = jppy
description = "Jpp Python package"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.km3net.de/km3py/jppy
author = Tamas Gal
author_email = tgal@km3net.de
maintainer = Tamas Gal
maintainer_email = tgal@km3net.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    C++11
    Python bindings
    KM3NeT
    muon
    neutrino
    shower
    hadronic
    electromagnetic
    Photomultiplier tubes
    probability density function

[options]
packages = find:
install_requires =
    pybind11>=2.4
    setuptools>=40.6.2
    setuptools_scm
    toml
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[build_ext]
inplace=1

[options.packages.find]
where = src

[options.extras_require]
all =
    ipykernel
dev =
    ipykernel
    pytest
    pytest-cov
    pytest-flake8
    pytest-pylint
    pytest-watch
    sphinx-gallery>=0.1.12
    sphinx-rtd-theme>=0.3
    sphinx>=1.6.3
    sphinxcontrib-napoleon>=0.6.1
    sphinxcontrib-programoutput>=0.11
    sphinxcontrib-websupport>=1.0.1
    sphinx-autoapi
    twine
    wheel

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    src/version.py

